--- a/doc/_config.yml
+++ b/doc/_config.yml
@@ -5,8 +5,8 @@ relative_links:
   collections: true
 include:
   - README.md
-  - doc/benchmarking.md
-  - doc/input_files.md
-  - doc/mode_cis.md
-  - doc/mode_trans.md
-  - doc/mode_meta.md
+  - benchmarking.md
+  - input_files.md
+  - mode_cis.md
+  - mode_trans.md
+  - mode_meta.md
