--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ relative_links:
 include:
   - README.md
   - doc/README.md 
+  - doc/logo.svg
   - doc/benchmarking/README.md
   - doc/input_files/README.md
   - doc/mode_cis/README.md
