--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.14)
 project(apex VERSION 0.0.1)
 
-add_compile_options(-static -Wall -Wpedantic -flto)
+add_compile_options(-static -Wall -Wpedantic -flto -openmp -fno-math-errno)
 
 set(CMAKE_VERBOSE_MAKEFILE ON)
 set(CMAKE_CXX_STANDARD 14)
